// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
  position: relative;
  color: var(--font-color-primary);
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.dark-theme .emotion-2 {
  background-color: #001E2B;
  box-shadow: 0 4px #3D4F58;
}

.emotion-3 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
}

.emotion-3:focus-visible {
  box-shadow: inset;
}

.emotion-3:last-child {
  padding-right: 24px;
}

.emotion-3:first-child {
  padding-left: 32px;
}

.emotion-3 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-3>div {
  height: unset;
  min-height: unset;
}

.emotion-3 *,
.emotion-3 p,
.emotion-3 a {
  line-height: 20px;
}

.emotion-3>div>div>*,
.emotion-3>div>div p {
  margin: 0 0 12px;
}

.emotion-3>div>div>*:last-child {
  margin-bottom: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
    >
      <colgroup>
        <col
          style="width: 5%;"
        />
        <col
          style="width: 10%;"
        />
        <col
          style="width: 15%;"
        />
        <col
          style="width: 20%;"
        />
        <col
          style="width: 30%;"
        />
        <col
          style="width: 20%;"
        />
      </colgroup>
      <thead
        class="emotion-2"
      />
      <tbody>
        <tr
          class=""
        >
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                notebook
              </div>
            </div>
          </td>
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                50
              </div>
            </div>
          </td>
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                A
              </div>
            </div>
          </td>
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                college-ruled,perforated
              </div>
            </div>
          </td>
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                8
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
  position: relative;
  color: var(--font-color-primary);
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.dark-theme .emotion-2 {
  background-color: #001E2B;
  box-shadow: 0 4px #3D4F58;
}

.emotion-3 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  line-height: 24px;
  font-weight: 600;
  font-size: 13px;
}

.emotion-3:focus-visible {
  box-shadow: inset;
}

.emotion-3:last-child {
  padding-right: 24px;
}

.emotion-3 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-3>div {
  height: unset;
  min-height: unset;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-5 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  line-height: 24px;
  font-weight: 600;
  font-size: 13px;
}

.emotion-5:focus-visible {
  box-shadow: inset;
}

.emotion-5:last-child {
  padding-right: 24px;
}

.emotion-5 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-5>div {
  height: unset;
  min-height: unset;
}

.emotion-15:nth-of-type(even) {
  background-color: #F9FBFA;
}

.emotion-15:nth-of-type(even) {
  background-color: #F9FBFA;
}

.dark-theme .emotion-15:nth-of-type(even) {
  background-color: #112733;
}

.emotion-16 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  background-color: #F9FBFA;
  border-right: 3px solid #E8EDEB;
  font-weight: 600;
}

.emotion-16:focus-visible {
  box-shadow: inset;
}

.emotion-16:last-child {
  padding-right: 24px;
}

.emotion-16:first-child {
  padding-left: 32px;
}

.emotion-16 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-16>div {
  height: unset;
  min-height: unset;
}

.emotion-16 *,
.emotion-16 p,
.emotion-16 a {
  line-height: 20px;
}

.emotion-16>div>div>*,
.emotion-16>div>div p {
  margin: 0 0 12px;
}

.emotion-16>div>div>*:last-child {
  margin-bottom: 0;
}

.dark-theme .emotion-16 {
  background-color: #112733;
  border-right: 3px solid #3D4F58;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-18 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
}

.emotion-18:focus-visible {
  box-shadow: inset;
}

.emotion-18:last-child {
  padding-right: 24px;
}

.emotion-18:first-child {
  padding-left: 32px;
}

.emotion-18 * {
  font-size: 13px!important;
  line-height: inherit;
}

.emotion-18>div {
  height: unset;
  min-height: unset;
}

.emotion-18 *,
.emotion-18 p,
.emotion-18 a {
  line-height: 20px;
}

.emotion-18>div>div>*,
.emotion-18>div>div p {
  margin: 0 0 12px;
}

.emotion-18>div>div>*:last-child {
  margin-bottom: 0;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
    >
      <thead
        class="emotion-2"
      >
        <tr
          data-testid="leafygreen-ui-header-row"
        >
          <th
            class="emotion-3"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                name
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                quantity
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                size
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                status
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                tags
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                rating
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="emotion-15"
        >
          <td
            class="emotion-16"
            role="rowheader"
          >
            <div
              class="emotion-17"
            >
              <div>
                journal
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                25
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                14x21,cm
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                A
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                brown, lined
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                9
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <td
            class="emotion-16"
            role="rowheader"
          >
            <div
              class="emotion-17"
            >
              <div>
                notebook
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                50
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                A
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                college-ruled,perforated
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                8
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <td
            class="emotion-16"
            role="rowheader"
          >
            <div
              class="emotion-17"
            >
              <div>
                paper
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                100
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                D
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                watercolor
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                10
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <td
            class="emotion-16"
            role="rowheader"
          >
            <div
              class="emotion-17"
            >
              <div>
                planner
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                75
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                22.85x30,cm
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                D
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                2019
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                10
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <td
            class="emotion-16"
            role="rowheader"
          >
            <div
              class="emotion-17"
            >
              <div>
                postcard
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                45
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                10x,cm
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                D
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                double-sided,white
              </div>
            </div>
          </td>
          <td
            class="emotion-18"
          >
            <div
              class="emotion-17"
            >
              <div>
                2
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
